# to-do-backend

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_added_tasks_table.py
app/: main.py
app/core/: base_config.py  config.py  db_settings.py  logger.py  mixins.py
app/db/: db.py
app/models/: task.py
app/repositories/: base_repository.py  task_repository.py  unit_of_work.py
app/routers/: health.py  task.py
app/schemas/: health.py  task.py
app/services/: task_service.py
app/tests/: conftest.py  constants.py  test_health.py
app/utils/: health_checks.py
